--- a/website/cave.html
+++ b/website/cave.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="page-styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="level-detail cave">
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">🍋 WDGYL</div>
@@ -105,8 +105,8 @@
             </div>
 
             <div class="level-visual-large">
-                <div class="map-placeholder">
-                    <h3>Map</h3>
+                <div class="scrollable-map">
+                    <img src="images/cavepic.png" alt="Cave Map" class="level-map">
                 </div>
             </div>
         </div>
