--- a/website/forest.html
+++ b/website/forest.html
@@ -98,8 +98,8 @@
             </div>
 
             <div class="level-visual-large">
-                <div class="map-placeholder">
-                    <h3>Map</h3>
+                <div class="scrollable-map">
+                    <img src="images/Level1ScreenShot.png" alt="Forest Map" class="level-map">
                 </div>
             </div>
         </div>
