--- a/website/index.html
+++ b/website/index.html
@@ -51,7 +51,7 @@
         <section class="game-info">
             <div class="info-container">
                 <div class="info-image">
-                    <img src="images/game-screenshot.png" alt="Game Screenshot">
+                    <img src="images/Untitled design (3).png" alt="Game Screenshot">
                 </div>
                 <div class="info-text">
                     <h2>About the Game</h2>
